# opday

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  Makefile  README.md  dkrd  docker-compose.override-run.yaml  docker-compose.yaml
.github/workflows/: publish.yml  rust.yml
opday.dev/: docker-compose.override-run.prod.yaml  docker-compose.yaml  opday.toml  setup.md
opday.dev/nginx/: nginx.conf
src/: config.rs  exec.rs  flow.rs  main.rs
src/doc/: getting_started.md  mod.rs
src/provider/: docker.rs
tests/: dkrdeliver.test.toml  docker-compose.override-build.yaml  docker-compose.override-run-internal.yaml  docker-compose.override-run.prod.yaml  docker-compose.test.yaml  docker-compose.yaml
tests/01_trivial-backend-no-storage/: dkrdeliver.toml  docker-compose.override-run.prod.yaml  docker-compose.yaml
tests/01_trivial-backend-no-storage/test-backend/: Dockerfile  app.py  pyproject.toml
tests/02_simple-backend-with-database/: docker-compose.override-run.prod.yaml  docker-compose.yaml  opday.toml
tests/02_simple-backend-with-database/backend/: Dockerfile  app.py  pyproject.toml
tests/02_simple-backend-with-database/nginx/: nginx.conf
tests/test-backend/: pyproject.toml
